##
## $Id$
##
## This autoconf input file was designed to work with a modified version of
## autoconf which allows multiple compiles within the same source tree to
## proceed in parallel. However, large parts will work with the stock
## autoconf.
##
AC_INIT(tkPgplot.h,../../../../config)

dnl####################################################
dnl####################################################
dnl##
dnl## Extra command line options
dnl##
dnl####################################################
dnl####################################################

AC_ARG_ENABLE(static-binary,       [ --enable-static-binary        force binaries to be static])
AC_ARG_ENABLE(dynamic,             [ --enable-dynamic              build dynamic libraries])
AC_ARG_ENABLE(min-space,           [ --enable-min-space            delete intermediate objects])
dnl################
dnl################ THESE NEXT ONES ARE ONLY USED BY GLISH
dnl################
AC_ARG_ENABLE(min-space,           [  --enable-min-space          delete intermediate objects])
AC_ARG_ASSIGN(rc-dir,              [  --rc-dir=SITE_RC_DIR        directory for sitewide .glishrc])
AC_ARG_ASSIGN(key-dir,             [  --key-dir=SITE_KEY_DIR      directory for sitewide key files])
AC_ARG_ASSIGN(script-dir,          [  --script-dir=SCRIPT_DIR     directory for sitewide script files])
AC_ARG_ASSIGN(tcl-includes,        [  --tcl-includes=DIR          tcl and tk include files are in DIR])
AC_ARG_ASSIGN(tcl-libraries,       [  --tcl-libraries=DIR         tcl and tk libraries are in DIR])
AC_ARG_ASSIGN(pgplot-incl-flags,   [  --pgplot-incl-flags=flags   PGPLOT include flags])
AC_ARG_ASSIGN(pgplot-link-flags,   [  --pgplot-link-flags=flags   PGPLOT link flags])
AC_ARG_ASSIGN(pgplot-link-search,  [  --pgplot-link-search=flags  PGPLOT search flags])

AC_C_CONST
AC_PROG_CXX

AC_OUTPUT($ARCH/Makefile:Makefile.in tkpgplot/$ARCH/Makefile:tkpgplot/Makefile.in)
